add syncUserData method
