# api/smk.swagger.json
@@ -20,6 +20,12 @@
   ],
   "paths": {},
   "definitions": {
+    "protoBinary": {
+      "type": "object"
+    },
+    "protoCard": {
+      "type": "object"
+    },
     "protoCreatePasswordResponse": {
       "type": "object",
       "properties": {
@@ -65,6 +71,24 @@
         }
       }
     },
+    "protoPassword": {
+      "type": "object",
+      "properties": {
+        "login": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        },
+        "meta": {
+          "type": "string"
+        },
+        "version": {
+          "type": "integer",
+          "format": "int64"
+        }
+      }
+    },
     "protoRegisterUserResponse": {
       "type": "object",
       "properties": {
@@ -75,6 +99,38 @@
           "type": "string"
         }
       }
+    },
+    "protoSyncUserDataResponse": {
+      "type": "object",
+      "properties": {
+        "passwords": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/protoPassword"
+          }
+        },
+        "texts": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/protoText"
+          }
+        },
+        "binaries": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/protoBinary"
+          }
+        },
+        "cards": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/protoCard"
+          }
+        }
+      }
+    },
+    "protoText": {
+      "type": "object"
     }
   }
 }
